v0.3: Finished user API
