# application/controllers/controller_user.php
@@ -16,14 +16,15 @@ class Controller_User extends Controller {
 			$data = match (strtolower($_SERVER["REQUEST_METHOD"])) {
 				'get' => $this->model->get_user(),
 				'post' => $this->model->post_user(),
-				default => throw new Exception(405),
+				default => throw new Exception(405)
 			};
 		}
 		else {
 			$data = match (strtolower($_SERVER["REQUEST_METHOD"])) {
 				'get' => $this->model->get_user_index($index),
-				'post' => $this->model->post_user_index($index),
-				default => throw new Exception(405),
+				'put' => $this->model->put_user_index($index),
+				'delete' => $this->model->delete_user_index($index),
+				default => throw new Exception(405)
 			};
 		}
 		$this->view->generate('view_api.php', 'view_api_template.php', $data);
@@ -37,17 +38,14 @@ class Controller_User extends Controller {
 		if ($index == null) {
 			$data = match (strtolower($_SERVER["REQUEST_METHOD"])) {
 				'get' => $this->model->get_user_action('userid'),
-				'put' => $this->model->put_user_action('userid'),
-				'delete' => $this->model->delete_user_action('userid'),
-				default => throw new Exception(405),
+				default => throw new Exception(405)
 			};
 		}
 		else {
 			$data = match (strtolower($_SERVER["REQUEST_METHOD"])) {
 				'get' => $this->model->get_user_index_action($index, 'userid'),
 				'put' => $this->model->put_user_index_action($index, 'userid'),
-				'delete' => $this->model->delete_user_index_action($index, 'userid'),
-				default => throw new Exception(405),
+				default => throw new Exception(405)
 			};
 		}
 		$this->view->generate('view_api.php', 'view_api_template.php', $data);
@@ -61,17 +59,14 @@ class Controller_User extends Controller {
 		if ($index == null) {
 			$data = match (strtolower($_SERVER["REQUEST_METHOD"])) {
 				'get' => $this->model->get_user_action('name'),
-				'put' => $this->model->put_user_action('name'),
-				'delete' => $this->model->delete_user_action('name'),
-				default => throw new Exception(405),
+				default => throw new Exception(405)
 			};
 		}
 		else {
 			$data = match (strtolower($_SERVER["REQUEST_METHOD"])) {
 				'get' => $this->model->get_user_index_action($index, 'name'),
 				'put' => $this->model->put_user_index_action($index, 'name'),
-				'delete' => $this->model->delete_user_index_action($index, 'name'),
-				default => throw new Exception(405),
+				default => throw new Exception(405)
 			};
 		}
 		$this->view->generate('view_api.php', 'view_api_template.php', $data);
@@ -85,17 +80,14 @@ class Controller_User extends Controller {
 		if ($index == null) {
 			$data = match (strtolower($_SERVER["REQUEST_METHOD"])) {
 				'get' => $this->model->get_user_action('role'),
-				'put' => $this->model->put_user_action('role'),
-				'delete' => $this->model->delete_user_action('role'),
-				default => throw new Exception(405),
+				default => throw new Exception(405)
 			};
 		}
 		else {
 			$data = match (strtolower($_SERVER["REQUEST_METHOD"])) {
 				'get' => $this->model->get_user_index_action($index, 'role'),
 				'put' => $this->model->put_user_index_action($index, 'role'),
-				'delete' => $this->model->delete_user_index_action($index, 'role'),
-				default => throw new Exception(405),
+				default => throw new Exception(405)
 			};
 		}
 		$this->view->generate('view_api.php', 'view_api_template.php', $data);
@@ -109,17 +101,14 @@ class Controller_User extends Controller {
 		if ($index == null) {
 			$data = match (strtolower($_SERVER["REQUEST_METHOD"])) {
 				'get' => $this->model->get_user_action('group'),
-				'put' => $this->model->put_user_action('group'),
-				'delete' => $this->model->delete_user_action('group'),
-				default => throw new Exception(405),
+				default => throw new Exception(405)
 			};
 		}
 		else {
 			$data = match (strtolower($_SERVER["REQUEST_METHOD"])) {
 				'get' => $this->model->get_user_index_action($index, 'group'),
 				'put' => $this->model->put_user_index_action($index, 'group'),
-				'delete' => $this->model->delete_user_index_action($index, 'group'),
-				default => throw new Exception(405),
+				default => throw new Exception(405)
 			};
 		}
 		$this->view->generate('view_api.php', 'view_api_template.php', $data);
